--- a/index.html
+++ b/index.html
@@ -46,22 +46,22 @@
 
     <!-- Highlights Section -->
     <section class="max-w-5xl mx-auto py-12 px-6">
-      <p class="text-center text-2xl font-semibold text-indigo-600 dark:text-indigo-300 mb-8">不会聊天？让AI教你！</p>
+      <p class="text-center text-2xl font-semibold text-indigo-600 dark:text-indigo-300 mb-8">不会聊天？让AI手把手教你！</p>
       <div class="grid gap-6 md:grid-cols-3">
         <div class="bg-white dark:bg-slate-800 rounded-xl shadow-lg p-6 text-center">
           <div class="text-3xl text-indigo-500 mb-3"><i class="fas fa-comments"></i></div>
           <h3 class="text-xl font-bold mb-2">智能代聊</h3>
-          <p class="text-sm text-slate-600 dark:text-slate-300">不会开场？不会接话？AI教你如何说对话！</p>
+          <p class="text-sm text-slate-600 dark:text-slate-300">不会开场？不会接话？<br>AI教你如何说对话！</p>
         </div>
         <div class="bg-white dark:bg-slate-800 rounded-xl shadow-lg p-6 text-center">
           <div class="text-3xl text-pink-500 mb-3"><i class="fas fa-heart"></i></div>
           <h3 class="text-xl font-bold mb-2">撩人技巧</h3>
-          <p class="text-sm text-slate-600 dark:text-slate-300">从普通话题到情感升温，AI全程引导撩得刚刚好。</p>
+          <p class="text-sm text-slate-600 dark:text-slate-300">从普通话题到情感升温，<br>AI全程引导，撩得刚刚好。</p>
         </div>
         <div class="bg-white dark:bg-slate-800 rounded-xl shadow-lg p-6 text-center">
           <div class="text-3xl text-green-500 mb-3"><i class="fas fa-rocket"></i></div>
           <h3 class="text-xl font-bold mb-2">快速上头</h3>
-          <p class="text-sm text-slate-600 dark:text-slate-300">让对方觉得你既有趣又懂她，轻松推进关系。</p>
+          <p class="text-sm text-slate-600 dark:text-slate-300">让对方觉得你既有趣又懂她，<br>轻松推进关系。</p>
         </div>
       </div>
     </section>
@@ -70,7 +70,7 @@
     <section class="bg-white dark:bg-slate-900 py-12 px-6">
       <div class="max-w-5xl mx-auto">
         <h2 class="text-3xl font-bold text-center mb-6">小程序截图展示</h2>
-        <p class="text-center text-slate-600 dark:text-slate-300 mb-8">看看真实体验界面，感受AI聊天的魔力</p>
+        <p class="text-center text-slate-600 dark:text-slate-300 mb-8">看看你是怎么聊天的，再看看 AI 怎么教你的</p>
         <div class="flex flex-col md:flex-row gap-6 justify-center items-center">
           <img src="https://pic1.imgdb.cn/item/681f164358cb8da5c8eafc48.jpg" alt="小程序截图1" class="w-full md:w-1/2 rounded-xl shadow-lg" />
           <img src="https://pic1.imgdb.cn/item/681f164358cb8da5c8eafc49.jpg" alt="小程序截图2" class="w-full md:w-1/2 rounded-xl shadow-lg" />
